Fixed some layout issues and tweaked the responsive menubar.

--- a/main.less
+++ b/main.less
@@ -21,13 +21,22 @@ h3{
   padding: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 769px) {
   .my-header {
     display: none !important;
   }
+  .navbar-wrapper .container {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .navbar-header {
+    margin-right: 15px !important;
+    margin-left: 15px !important;
+  }
+
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .navbar-brand {
     display: none;
   }
